--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
 		"build": "docusaurus build",
 		"swizzle": "docusaurus swizzle",
 		"deploy": "npm run build && wrangler deploy",
+		"deploy:staging": "npm run build && wrangler deploy --env staging",
+		"deploy:production": "npm run build && wrangler deploy --env production",
+		"dev": "wrangler dev",
 		"clear": "docusaurus clear",
 		"serve": "docusaurus serve",
 		"write-translations": "docusaurus write-translations",
 		"write-heading-ids": "docusaurus write-heading-ids",
-		"typecheck": "tsc",
-		"preview": "npm run build && wrangler dev"
+		"typecheck": "tsc"
 	},
 	"dependencies": {
 		"@docusaurus/core": "3.8.1",
 		"@docusaurus/preset-classic": "3.8.1",
 		"@mdx-js/react": "^3.0.0",
 		"clsx": "^2.0.0",
+		"docusaurus-lunr-search": "^3.6.0",
+		"docusaurus-plugin-hubspot": "^1.0.1",
+		"lunr": "^2.3.9",
 		"prism-react-renderer": "^2.3.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
@@ -29,7 +34,7 @@
 		"@docusaurus/tsconfig": "3.8.1",
 		"@docusaurus/types": "3.8.1",
 		"typescript": "~5.6.2",
-		"wrangler": "^4.40.2"
+		"wrangler": "^4.24.0"
 	},
 	"browserslist": {
 		"production": [
