--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"docusaurus-lunr-search": "^3.6.0",
 		"docusaurus-plugin-hubspot": "^1.0.1",
 		"lunr": "^2.3.9",
+		"plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
 		"prism-react-renderer": "^2.3.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
