--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"clsx": "^2.0.0",
 		"docusaurus-lunr-search": "^3.6.0",
 		"docusaurus-plugin-hubspot": "^1.0.1",
+		"html2canvas": "^1.4.1",
+		"jspdf": "^3.0.3",
 		"lunr": "^2.3.9",
 		"plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
 		"prism-react-renderer": "^2.3.0",
@@ -35,6 +37,7 @@
 		"@docusaurus/module-type-aliases": "3.8.1",
 		"@docusaurus/tsconfig": "3.8.1",
 		"@docusaurus/types": "3.8.1",
+		"@types/jspdf": "^1.3.3",
 		"typescript": "~5.6.2",
 		"wrangler": "^4.24.0"
 	},
