--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"clsx": "^2.0.0",
 		"docusaurus-lunr-search": "^3.6.0",
 		"docusaurus-plugin-hubspot": "^1.0.1",
+		"html2canvas": "^1.4.1",
 		"lunr": "^2.3.9",
+		"pdf-lib": "^1.17.1",
 		"plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
 		"prism-react-renderer": "^2.3.0",
 		"react": "^19.0.0",
